fixed type image alignment. closes #7

--- a/swecune/static/css/pokemon.css
+++ b/swecune/static/css/pokemon.css
@@ -1,8 +1,7 @@
 #poke-thumbnail {
     border-radius: 5px;
     border-width: 8px;
-    width: 230px;
-    height: 230px;
+    width: 200px;
     margin-right: auto;
     margin-left: auto;
     display: block;
